<resources>
    <string name="app_name">cooking_unit_converter</string>
    <string name="tablespoons">Tablespoons</string>
    <string name="cups">Cups</string>
    <string name="milliliters">Milliliters</string>
    <string name="liquid_ounces">Liquid Ounces</string>
    <string name="convert_units">Convert units</string>
    <string name="conversion">Conversion: %s</string>
    <string name="round_conversion">Round conversion</string>

</resources>